--- a/style.css
+++ b/style.css
@@ -108,26 +108,75 @@
     width: fit-content;
  
 }
-.skill{
+/* .skill{
   
     background-color: rgb(40, 42, 42);
     color: white;
     /* text-align: center; */
-    height: 300px;
+    /* height: 300px; */
+    /* padding: 10px; */
+    /* padding-left: 350px; */
+    
+/* } */
+/* .skill>h1{ */
+    /* font-weight: 700; */
+    /* display: inline-block;  */
+    /* border-bottom: 2px solid rgb(222, 219, 30);  */
+    /* padding-bottom: 2px; */
+    
+/* } */
+/* .py{ */
+    /* margin-top: 10px; */
+/* }  */
+
+#skills {
+    text-align: center;
+    padding: 30px;
+    font-size: 35px;
+    background-color: rgb(40, 42, 42);
+    color: white;
+    font-weight: 500;
+    padding-bottom: 5px
+    
+
+
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: rgb(40, 42, 42);
     padding: 10px;
-    padding-left: 350px;
-    
+    gap: 60px;
+   
+  
+   
 }
-.skill>h1{
-    font-weight: 700;
-    display: inline-block; 
-    border-bottom: 2px solid rgb(222, 219, 30); 
-    padding-bottom: 2px;
-    
+#head {
+    color: white;
+    font-weight: 400;
+
 }
-.py{
-    margin-top: 10px;
+.grid-item {
+    background-color: rgb(222, 219, 30);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    height: 300px;
+    justify-content: center;
+    align-content: space-between;
+    border-color: white;
+    border-radius: 10%;
 }
+#listess{
+    text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    color: white;
+}
+
 
 
 .contact{
